# build-your-js

./: CMakeLists.txt  README.md
src/: main.cpp
testcases/: tc10_classes.js  tc11_destructuring.js  tc12_generators.js  tc1_even_odd.js  tc3_armstrong.js  tc4_array_reverse.js  tc5_string_palindrome.js  tc6_closures.js  tc7_map_filter_reduce.js  tc8_spread_rest.js  tc9_promises.js
